WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100380
[EFL][WK2] Memory leak in _ewk_view_preedit_changed()
https://bugs.webkit.org/show_bug.cgi?id=100380
Summary
[EFL][WK2] Memory leak in _ewk_view_preedit_changed()
Chris Dumez
Reported
2012-10-25 07:36:07 PDT
There is a memory leak in _ewk_view_preedit_changed(), the buffer is never freed.
Attachments
Patch
(1.39 KB, patch)
2012-10-25 07:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-25 07:37:43 PDT
Created
attachment 170647
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-25 08:19:43 PDT
Comment on
attachment 170647
[details]
Patch Clearing flags on attachment: 170647 Committed
r132485
: <
http://trac.webkit.org/changeset/132485
>
WebKit Review Bot
Comment 3
2012-10-25 08:19:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug