[EFL][WK2] Memory leak in _ewk_view_preedit_changed() https://bugs.webkit.org/show_bug.cgi?id=100380

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-25
Reviewed by Antonio Gomes.

Fix memory leak in _ewk_view_preedit_changed(). The buffer
returned by ecore_imf_context_preedit_string_get() is never
freed.

* UIProcess/API/efl/EwkViewImpl.cpp:
(_ewk_view_preedit_changed):

Canonical link: https://commits.webkit.org/118399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132485 268f45cc-cd09-0410-ab3c-d52691b4dbfc